--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+  "name": "embed-extract",
+  "version": "1.0.0",
+  "dependencies": {
+    "express": "^4.18.2",
+    "puppeteer-core": "^23.5.3",
+    "@sparticuz/chromium": "^128.0.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
+    "serverless-http": "^3.2.0",
+    "path": "^0.12.7"  // If not already included, though it's built-in
+  },
   "scripts": {
     "start": "node app.js",
     "dev": "netlify dev"
