--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "serverless-http": "^3.2.0",
-    "path": "^0.12.7"  // If not already included, though it's built-in
+    "path": "^0.12.7"
   },
   "scripts": {
     "start": "node app.js",
