--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@
 
 [functions]
   external_node_modules = ["serverless-http", "@sparticuz/chromium"]
+  node_bundler = "esbuild"
 
 [[redirects]]
   from = "/api/*"
