--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scraper-tmdb",
+  "name": "scraper-app",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^23.5.3"
+    "puppeteer": "^23.5.3",
+    "@sparticuz/chromium": "^123.0.1"
   }
 }
